# Evolutionary_Diffusion_Enhancement

./: .gitignore  main.py  pyproject.toml
logs/preflight/: metric_a_cat_1548547.out  metric_a_cat_1548857.out  metric_a_cat_1548869.out  metric_a_cat_1548870.out  metric_a_cat_1548877.out
notebooks/: BLIP2_Structure_Plot.ipynb  Seed_Transfer_Cat_to_Dog.ipynb  a_cat_1549660.ipynb  blip2_sandbox.ipynb
preflight/: generate_baseline_for_prompt.py
ressources/blip2_baseline_embeddings/a_cat/: blip2_n_0000.pt  blip2_n_0001.pt  blip2_n_0002.pt  blip2_n_0003.pt  blip2_n_0004.pt  blip2_n_0005.pt  (+994 more)
scripts/genetric_algorithms/: health_check.sh
scripts/preflight/: generate_metric.sh
scripts/transfer/: transfer_noise.sh
simulations/: seed_transfare.py
src/: .gitignore
src/crossover/: __init__.py  arithmetic_crossover.py  base_crossover.py  n_point_crossover.py  uniform_crossover.py
src/evaluators/: base_evaluator.py  global_max_mean_divergence_evaluator.py  kernel_density_estimation_evaluator.py
src/factory/: __init__.py  noise_factory.py
src/factorys/: noise_factory.py
src/huggingface_models/: __init__.py  base_strategy.py  model_loader.py
src/models/: noise.py
src/mutators/: base_mutator.py  uniform_gaussian_mutator.py
src/pipelines/: genetic_algorithm.py  pipeline.py  pipeline_builder.py
src/selector_functions/: base_selectorf_unction.py  rank_selector.py  roulette_selector.py  tournament_selector.py
src/selectors/: rank_selector.py  roulette_selector.py  tournament_selector.py
src/utils/: arg_parser.py  embedding_functions.py  loader.py  pca.py
(+1004 files in other folders)
