[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers>=0.35.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "torch-kde>=0.1.5",
    "transformers>=4.57.0",
]
